# BrickNet

./: .gitignore  .pre-commit-config.yaml  DATA.md  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
eval/: README.md  pe.py  siglip2.py  vqascore.py
scripts/: generate.py
src/bricknet/: __init__.py  __main__.py  collision.py  core.py  data.py  graph.py  score.py  tree.py
src/bricknet/_data/v1/: color_names.json  labels.json.xz  part_aliases.json.xz  part_names.json
